# Ishtarkati

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.githooks/: commit-msg
electron/: autoBackup.test.ts  autoBackup.ts  autoBackupStatus.ts  backgroundServices.ts  backup.test.ts  backup.ts  deviceLabel.test.ts  deviceLabel.ts  electron-env.d.ts  main.ts  preload.ts  schema.ts  sync.ts  syncMeta.ts  syncUtil.test.ts  syncUtil.ts  uiLocale.ts
release-notes/: ar-pending.md  v4.19.0.md  v4.19.1.md  v4.20.0.md  v4.21.0.md  v4.22.0.md  v4.23.0.md  v4.25.0.md  v4.27.0.md  v4.28.0.md  v4.29.0.md  v4.29.1.md  v4.31.0.ar.md  v4.31.0.md  v4.31.1.ar.md  v4.31.1.md  v4.31.2.ar.md  v4.31.2.md  v4.31.3.ar.md  v4.31.3.md  v4.32.0.ar.md  v4.32.0.md  v4.32.1.ar.md  v4.32.1.md  v4.33.0.ar.md  v4.33.0.md  v4.33.1.ar.md  v4.33.1.md  v4.33.2.ar.md  v4.33.2.md  v4.33.3.ar.md  v4.33.3.md  v4.34.0.ar.md  v4.34.0.md  v4.35.0.ar.md  v4.35.0.md  v4.36.0.ar.md  v4.36.0.md  v4.36.1.ar.md  v4.36.1.md  (+25 more)
scripts/: _sqlite-electron-probe.cjs  backup-user-db.sh  bump-patch-for-build.mjs  bump-version-for-build.mjs  bump-version.mjs  commit-message-rewrites.json  commit-msg-filter.mjs  git-ship-author.mjs  git-ship.mjs  githook-commit-msg.mjs  platform-build.mjs  release-notes.mjs  run-appimage.sh  sync-version.mjs  validate-commit-message.mjs  verify-sqlite-electron.mjs
src/: App.tsx  index.css  main.tsx  types.ts  version.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+127 files in other folders)
